--- a/PracticasCSSLizee/PracticasCSSLizee/CB2Lizee.html
+++ b/PracticasCSSLizee/PracticasCSSLizee/CB2Lizee.html
@@ -77,6 +77,8 @@ h2::before {
    <p>de la Web el 12 de marzo de 1989, pero no tuvo mucho eco, por lo que en 1990 y con la ayuda de <em>Robert Cailliau</em>, hicieron una revisión que fue aceptada por su gerente, <em>Mike Sendall</em>. Usó ideas similares a las que había</p>
    <p>usado en el sistema <strong>Enquire</strong>, para crear la <em>World Wide Web</em>, para esto diseñó y construyó el primer navegador (llamado <em>WorldWideWeb</em> y desarrollado con <strong>NEWSTEP</strong>) y el primer servidor Web al que llamó <strong>httpd</strong> (HyperText Transfer Protocol daemon)</p>
 
+      <h1> Esta es una pruebita </h1>
    <p>Fuente: <em>Wikipedia</em></p>
 </body>
+
 </html>
